feature:atualização no css e html

--- a/style.css
+++ b/style.css
@@ -17,14 +17,15 @@
 .left-section {
     grid-column: span 2;
     height: 100%;
-    background-color: #999999;
+    background-color: #7986ac;
+    border-radius: 60px 0px 0px 60px;
 }
 
 .right-section {
     grid-column: span 5;
     height: 100%;
-    background-color: #424a50;
-    border-radius: 0px 60px 0px 0px;
+    background-color: #1c496b;
+    border-radius: 0px 60px 60px 0px;
 }
 
 .left-section-contents{
@@ -37,8 +38,11 @@
 }
 
 .profile .profile-image {
-    width: 100%;
-    border-radius: 100%;
+    width: 90%;
+    padding-left: 35px;
+    padding-top: 50px;
+    position: relative;
+   
 }
 
 .name {
@@ -62,7 +66,7 @@
 }
 
 .contact-info ul {
-    padding-top: 1.5rem;
+    padding-top: .2rem;
 }
 
 .contact-info ul li,
@@ -79,10 +83,13 @@
 }
 
 .skills ul {
-    padding-top: 1.5rem;
+    padding-right: 1rem;
+    font-size: 18px;
+    color: #eeeeee;
 }
 .skills ul li p {
-    padding: .4rem 0;
+    padding-right: 1rem;
+    font-size: 18px;
     color: #eeeeee;
 }
 
@@ -100,4 +107,39 @@
 .about-me-contents {
     font-size: 18px;
     color: #eeeeee;
+}
+
+.experience-contents,
+.education-contents,
+.awards-contents {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 2rem;
+    color: #f7f6f4;
+}
+
+.exp-company-name,
+.education-school-name,
+.awards-company-name {
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.exp-time-period,
+.educationp-time-period,
+.awards-time-period {
+    font-size: 18px;
+}
+
+.exp-position,
+.education-subject,
+.awards-name {
+    font-size: 25px;
+}
+
+.exp-desc,
+.education-desc,
+.awards-desc {
+    font-size: 16px;
+    padding-left: 5px;
 }
